--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,6 @@ logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
 app.mail.server=https://mail.qbits.mx/
 
 db_driver=com.mysql.cj.jdbc.Driver
-xdb_url=jdbc:mysql://localhost:3306/goodle
-db_url=jdbc:mysql://172.31.20.183:3306/bitnami_moodle
-zdb_url=jdbc:mysql://54.165.81.195:3306/bitnami_moodle
+db_url=jdbc:mysql://localhost:3306/goodle
 db_user=garellano
 db_pass=garellano
